# gtfs.guru

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  README.md  analyze_benchmark_results.py  compare_reports.py  compare_with_jar.py  docker-compose.yml  fix_test_defaults.py  fix_truncated_files.py  java_log.txt  mkdocs.yml  run_all_tests_comparison.py  run_benchmark_comparison.py  run_wasm.js  test_python.py  test_wasm.js  test_wasm.mjs  wasm_report.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  golden.yml  pages.yml  publish.yml  release.yml  rust.yml
benchmark-java/: report.html  report.json
benchmark-rust/: report.html  report.json
cargo-flamegraph.trace/: form.template
cargo-flamegraph.trace/Trace1.run/: RunIssues.storedata
cli_report.json/: report.html  report.json  system_errors.json
crates/gtfs_model/: Cargo.toml
crates/gtfs_model/src/: lib.rs
crates/gtfs_validator_cli/: Cargo.toml
crates/gtfs_validator_cli/src/: main.rs
crates/gtfs_validator_core/: Cargo.toml
crates/gtfs_validator_core/benches/: benchmark_shape_matching.rs
crates/gtfs_validator_core/src/: csv_reader.rs  csv_schema.rs  csv_validation.rs  engine.rs  feed.rs  geojson.rs  input.rs  lib.rs  notice.rs  notice_schema.rs  progress.rs  string_pool.rs  table_status.rs  validation_context.rs  validator.rs
crates/gtfs_validator_core/src/rules/: agency_consistency.rs  attribution_without_role.rs  bidirectional_exit_gate.rs  bikes_allowance.rs  block_trips_with_overlapping_stop_times.rs  booking_rules.rs  calendar.rs  calendar_presence.rs  continuous_pickup_drop_off.rs  date_trips.rs  duplicate_fare_media.rs  duplicate_key.rs  duplicate_route_name.rs  duplicate_stop_sequence.rs  expired_calendar.rs  fare_attribute_agency_id.rs  fare_attributes.rs  fare_leg_join_rule.rs  fare_leg_rule_network_id_foreign_key.rs  fare_media_name.rs  fare_product_default_rider_categories.rs  fare_rules.rs  fare_transfer_rule_duration_limit.rs  fare_transfer_rule_transfer_count.rs  feed_expiration_date.rs  feed_info.rs  feed_service_date.rs  frequencies.rs  google_rules.rs  lat_lon.rs  location_has_stop_times.rs  location_id_foreign_key.rs  location_type.rs  locations_geojson_notices.rs  locations_geojson_presence.rs  matching_feed_and_agency_lang.rs  missing_level_id.rs  missing_stops_file.rs  missing_trip_edge.rs  mod.rs  (+50 more)
crates/gtfs_validator_core/tests/: integration_tests.rs
crates/gtfs_validator_gui/: Cargo.toml  README.md  tauri.conf.json
crates/gtfs_validator_gui/capabilities/: default.json
crates/gtfs_validator_gui/frontend/: index.html
crates/gtfs_validator_gui/icons/: icon.icns  icon.png.bak  icon.png.failed_sips
crates/gtfs_validator_gui/src/: lib.rs  main.rs
crates/gtfs_validator_python/: Cargo.toml  README.md  pyproject.toml
crates/gtfs_validator_python/python/gtfs_guru/: __init__.py  __init__.pyi
crates/gtfs_validator_python/src/: lib.rs
crates/gtfs_validator_report/: Cargo.toml
crates/gtfs_validator_report/src/: html.rs  lib.rs  sarif.rs
crates/gtfs_validator_wasm/: Cargo.toml  package.json.template
crates/gtfs_validator_wasm/demo/: index.html
crates/gtfs_validator_wasm/js/: index.js
crates/gtfs_validator_wasm/scripts/: benchmark_wasm.js
crates/gtfs_validator_wasm/src/: lib.rs
crates/gtfs_validator_wasm/tests/: wasm.rs
crates/gtfs_validator_wasm/types/: index.d.ts
crates/gtfs_validator_web/: Cargo.toml
crates/gtfs_validator_web/src/: main.rs
crates/gtfs_validator_web/static/: index.html
crates/gtfs_validator_web/website/: faq.html  how-to-validate-gtfs.html  index.html  privacy.html  terms.html  why-is-my-gtfs-rejected.html
crates/gtfs_validator_web/website/pkg/: gtfs_guru_wasm_bg.wasm  gtfs_guru_wasm_bg.wasm.d.ts
deploy/: HETZNER.md  UMAMI.md  backup.sh  hetzner-setup.sh  status.sh  update.sh
docs/: MAINTENANCE.md  golden.md  index.md  installation.md  llm.md  python_api.md  rules.md  usage.md  wasm.md
docs/agents/: benchmarks.md  cli.md  core-validator.md  gui.md  python.md  wasm.md  web-api.md
examples/: README.md  python_demo.ipynb
fuzz/: Cargo.toml
fuzz/fuzz_targets/: csv_parser.rs  date_trips.rs  timeframe_overlap.rs
jar_report/: report.html  report.json
output-guru-ny-optimized/: report.html  report.json
output-java-nl/: report.html  report.json
output_test/: report.html  report.json
plans/: gtfs-validator-rust-rewrite.md
scripts/: README.md  benchmark_compare.py  benchmark_python.py  bootstrap.sh  build-installers.sh  build-wasm.sh  check.sh  ci_golden.sh  compare_defaults.sh  compare_reports.py  deploy-to-hetzner.sh  deploy-website.sh  expected_layout.example.txt  generate_all_icons.sh  generate_icons.py  golden.env.example  golden.py  golden.sh  golden_manifest.example.tsv  golden_single.py  golden_single.sh  install.ps1  install.sh  publish_crates.sh  run_all_tests_comparison.py  run_benchmark_comparison.py  run_golden_compare.py  run_golden_compare.sh  run_golden_suite.py  run_golden_suite.sh  run_google_tests.py  run_python_single.py  run_wasm_single.js  update_expected_from_manifest.py  validate_golden_manifest.py
test-gtfs-feeds/: README.md
verification_report/: report.html  report.json
verification_report_compact/: report.html  report.json
verification_report_errors_compact/: report.html  report.json
verification_report_v3/: report.html  report.json
verification_report_v4/: report.html  report.json
verification_report_v5/: report.html  report.json
verification_report_v6/: report.html  report.json
website/: CNAME  Dockerfile  contact.html  faq.html  gtfs-vs-gtfs-realtime.html  how-often-update-gtfs.html  how-to-create-gtfs-file.html  how-to-get-my-bus-on-google-maps.html  how-to-validate-gtfs.html  index.html  is-gtfs-free.html  nginx.conf  privacy.html  robots.txt  script.js  style.css  terms.html  what-does-gtfs-stand-for.html  what-is-gtfs-used-for.html  where-to-find-gtfs-feeds.html  who-uses-gtfs.html  why-is-my-gtfs-rejected.html
website/pkg/: gtfs_guru_wasm.d.ts  (+9 more)
(+382 files in other folders)
