[workspace]
members = [
  "crates/gtfs_model",
  "crates/gtfs_validator_core",
  "crates/gtfs_validator_report",
  "crates/gtfs_validator_cli",
  "crates/gtfs_validator_web",
  "crates/gtfs_validator_gui",
  "crates/gtfs_validator_python",
  "crates/gtfs_validator_wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
csv = "1.3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
regex = "1.10"
base64 = "0.22"
url = "2.5"
axum = "0.7"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "fs", "signal"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
