[package]
name = "gtfs-guru-gui"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Desktop GUI for GTFS Validator"
repository = "https://github.com/abasis-ltd/gtfs.guru"
homepage = "https://github.com/abasis-ltd/gtfs.guru"

[lib]
name = "gtfs_validator_gui_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gtfs-guru-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gtfs-guru-core = { path = "../gtfs_validator_core", version = "0.1.1" }
gtfs-guru-report = { path = "../gtfs_validator_report", version = "0.1.0" }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Networking
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
uuid = { version = "1.0", features = ["v4"] }

# Utils
anyhow = { workspace = true }
chrono = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
