[package]
name = "gtfs-guru-report"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gtfs-guru-model = { path = "../gtfs_model" }

[dependencies.gtfs-guru-core]
path = "../gtfs_validator_core"
