[package]
name = "gtfs-guru-wasm"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "GTFS validator compiled to WebAssembly for browser-based validation"
repository = "https://github.com/abasis-ltd/gtfs.guru"
homepage = "https://github.com/abasis-ltd/gtfs.guru"

[package.metadata.wasm-pack.profile.release]
# Disable built-in wasm-opt (we'll run it separately with proper flags)
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"
chrono = { workspace = true }

# Optional: better panic messages in browser console
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.gtfs-guru-core]
path = "../gtfs_validator_core"
version = "0.1.1"
default-features = false  # Disable rayon for WASM

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = { workspace = true }
