[package]
name = "gtfs-guru-web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dependencies.gtfs-guru-core]
path = "../gtfs_validator_core"
version = "0.1.0"

[dependencies.gtfs-guru-report]
path = "../gtfs_validator_report"
version = "0.1.0"
