[package]
name = "gtfs-guru-web"
version = "0.9.3"
edition = "2021"
license = "Apache-2.0"
description = "Web API for GTFS Guru validator"
repository = "https://github.com/abasis-ltd/gtfs.guru"
homepage = "https://github.com/abasis-ltd/gtfs.guru"
[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
include_dir = "0.7"
mime_guess = "2.0"

[dependencies.gtfs-guru-core]
path = "../gtfs_validator_core"
version = "0.9.3"

[dependencies.gtfs-guru-report]
path = "../gtfs_validator_report"
version = "0.9.3"
